@@ -1,6 +1,6 @@
 ;;; gnus-ofsetup.el --- Setup advisor for Offline reading for Mail/News.
 ;;;
-;;; $Id: gnus-ofsetup.el,v 1.1.4.4 1999-02-03 22:11:10 yamaoka Exp $
+;;; $Id: gnus-ofsetup.el,v 1.1.4.5 1999-02-15 06:31:58 ichikawa Exp $
 ;;;
 ;;; Copyright (C) 1998 Tatsuya Ichikawa
 ;;; Author: Tatsuya Ichikawa <t-ichi@po.shiojiri.ne.jp>
@@ -227,26 +227,32 @@
 			    (append mail-source
 				    (list
 				     (list
-				      auth
+				      'pop
 				      :user user
 				      :server server
-				      :program prog
-				      :args (format "%s %s" args
-						    (concat "po:" user)))))))
+				      :program
+				      (format "%s %s %s %s %s"
+					      prog
+					      args
+					      "po:%u"
+					      "%t"
+					      "%p")
+					      :authentication auth)))))
 		  (setq mail-source
 			(append mail-source
 				(list
 				 (list
-				  auth
+				  'pop
 				  :user user
-				  :server server))))))
+				  :server server
+				  :authentication auth))))))
 	      (setq i (- i 1)))
 	    ;; Replace "hoge" -> 'hoge
 	    (mapcar
 	     (lambda (x)
-	       (if (string-equal (nth 0 x) "pop")
-		   (setcar x 'pop)
-		 (setcar x 'apop)))
+	       (if (string-equal (car (last x)) "pop")
+		   (setcar (last x) (quote 'pop))
+		 (setcar (last x) (quote 'apop))))
 	     mail-source)
 	    (setq gnus-offline-mail-source mail-source)))
 
@@ -334,7 +340,9 @@
 	(insert "(add-hook 'gnus-after-getting-new-news-hook 'gnus-offline-after-get-new-news)\n")
 	(insert "(add-hook 'gnus-after-getting-news-hook 'gnus-offline-after-get-new-news)\n")
 	(if (eq gnus-offline-news-fetch-method 'nnspool)
-	    (insert "(add-hook 'after-getting-news-hook 'gnus-offline-nnspool-hangup-line)\n"))
+	    (progn
+	      (insert "(add-hook 'after-getting-news-hook 'gnus-offline-nnspool-hangup-line)\n")
+	      (insert "(add-hook 'gnus-before-startup-hook (lambda () (setq nnmail-spool-file nil)))\n")))
 	(insert "(add-hook 'message-send-hook 'gnus-offline-message-add-header)\n")
 	(insert "(autoload 'gnus-offline-setup \"gnus-offline\")\n")
 	(insert "(add-hook 'gnus-load-hook 'gnus-offline-setup)\n")
@@ -342,7 +350,6 @@
 	(if (not (locate-library "mail-source"))
 	    (progn
 	      ;; Write setting about pop3-fma.
-	      (insert "(setq nnmail-spool-file nil)\n")
 	      (insert "(require 'pop3-fma)\n")
 	      (insert "(add-hook 'message-send-hook 'pop3-fma-message-add-header)\n")
 	      (insert "(setq pop3-fma-spool-file-alist '")
