@@ -1,3 +1,11 @@
+1999-02-15  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>
+
+	* lisp/gnus-ofsetup.el (gnus-setup-for-offline): Bug fix when
+	using nnspool.
+
+	* lisp/pop3-fma.el (pop3-fma-movemail): Delete meadow specific
+	code.
+
 1999-02-12  Katsumi Yamaoka   <yamaoka@jpl.org>
 
 	* lisp/gnus-art.el (article-hide-headers): Show all headers when
